--- a/client/src/components/Nav/Nav.css
+++ b/client/src/components/Nav/Nav.css
@@ -6,7 +6,6 @@
   font-family: "Gilda Display", serif;
   letter-spacing: 3px;
   font-size: 20px;
-  z-index: 999;
 }
 
 .link {
